# inversora-api

./: .dockerignore  .env.example  .env.pro.example  .env.qa.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  LICENSE.md  README.md  docker-compose.yml  eslint.config.mjs  nest-cli.json  package-lock.json  package.json  prisma.config.ts
.github/: dependabot.yml
agent-service/: Dockerfile  README.md  pyproject.toml
agent-service/app/: __init__.py  agent.py  auth.py  backend_tools.py  config.py  logging_config.py  main.py  prompts.py  schemas.py
agent-service/tests/: test_agent.py  test_auth.py  test_backend_tools.py  test_prompts_and_schemas.py
docs/: README.md  analytics-dashboards.md  assistant-eval-set.md  assistant-pipeline.md  bff-fund-detail-contract.md  catalog-visibility.md  cors-and-expo-client.md  development-guide.md  featured-funds-endpoint.md  fmp-capabilities-roadmap.md  fmp-provider.md  fund-editorial-content.md  funds-module.md  infrastructure-phases.md  integration-tests.md  openai-agent-python-backend.md  purpose-and-scope.md  roles-and-responsibilities.md  scoring-algorithm.md  scoring-rn-04.md  security-contingency-plan.md  security-hardening.md  security-report.md  staging-deploy.md
env/: local.env  pro-local.env  pro.env  qa.env
prisma/: schema.prisma
scripts/: capture-fmp-fixtures.mjs  capture-myinvestor-fixtures.mjs  check-mojibake.cjs  count-funds.mjs  create-prisma-client.mjs  docker-entrypoint.sh  ensure-prisma-client.cjs  load-env.cjs  load-env.spec.cjs  load-project-env.mjs  preload-env.cjs  preload-env.mjs  (+9 more)
(+465 files in other folders)
