[project]
name = "sora-agent-service"
version = "0.1.0"
description = "Internal OpenAI Agents SDK runtime for Inversora SORA"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openai-agents>=0.6.0",
  "pydantic>=2.8.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
